@@ -10,9 +10,24 @@
   <groupId>org.eclipse.mylyn</groupId>
   <artifactId>org.eclipse.mylyn.tests.performance</artifactId>
   <version>3.5.0-SNAPSHOT</version>
-  <packaging>eclipse-plugin</packaging>
+  <packaging>eclipse-test-plugin</packaging>
+  <properties>
+    <mylyn-performance-test-suite>org.eclipse.mylyn.tests.performance.AllPerformanceTests</mylyn-performance--test-suite>
+  </properties>
   <build>
     <plugins>
+      <plugin>
+	<groupId>org.sonatype.tycho</groupId>
+	<artifactId>maven-osgi-test-plugin</artifactId>
+	<version>${tycho-version}</version>
+	<configuration>
+	  <useUIHarness>true</useUIHarness>
+	  <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
+	  <testSuite>org.eclipse.mylyn.tests.performance</testSuite>
+	  <testClass>${mylyn-test-suite}</testClass>
+	  <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.io.tmpdir=${project.build.directory}</argLine>
+	</configuration>
+      </plugin>
       <plugin>
         <groupId>org.sonatype.tycho</groupId>
         <artifactId>maven-osgi-source-plugin</artifactId>
